[package]
name = "token-source"
version = "1.0.0"
authors = ["yoshidan <naohiro.y@gmail.com>", "nvivot <vivot.nicolas@gmail.com>"]
edition = "2021"
repository = "https://github.com/nicolas-vivot/token-source/tree/main"
keywords = ["authentication","token","oauth2", "idtoken","token-source"]
license = "MIT"
readme = "README.md"
description = "High level API for token source providers."

[lib]
doctest = false

[dependencies]
async-trait = "0.1"